compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_variable_update.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\n        pub type Person {\n            Person(name: String, age: Int)\n        };\n        pub fn update_person() {\n            Person(..person)\n        }"

---

error: Unknown variable
  ┌─ /src/one/two.gleam:6:20
  │
6 │             Person(..person)
  │                    ^^^^^^^^ did you mean `Person`?

The name `person` is not in scope here.

